remove vertical scrollbar, bugfix undefinied 14-16, prevent double click on reservation form

--- a/web/assets/css/custom.css
+++ b/web/assets/css/custom.css
@@ -12,6 +12,10 @@ a, a:hover, a:visited{
     color: #ffc107 !important;
 }
 
+#kontakt .row {
+    margin-right: 0;
+}
+
 
 
 .navbar-brand {
